--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telnet-engine",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "\"node.js interface to Telnet device,",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   "keywords": [
     "telnet",
     "TCP",
-    "websocket"
+    "websocket",
   ],
   "author": "CABrouwers",
   "license": "MIT",
