--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "telnet",
     "TCP",
-    "websocket",
+    "websocket"
   ],
   "author": "CABrouwers",
   "license": "MIT",
