--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "telnet-engine",
-  "version": "0.1.4",
+  "version": "1.0.0",
   "description": "\"node.js interface to Telnet device,",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\\\\\"Error: no test specified\\\\\\\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
